--- a/main.css
+++ b/main.css
@@ -7,13 +7,18 @@
 }
 
 .navbar {
-	margin-bottom: 0;
+	height: 60px;
+	background: #777777;
 }
 
 #navButtons {
-	margin: 0;
+	margin-top: 15px;
 	padding: 0;
 	border: 0;
+}
+
+.navbar-brand {
+	margin-top: 10px;
 }
 
 #navButtons:hover {
@@ -30,7 +35,7 @@
 }
 
 #mycarousel {
-	margin: 0;
+	margin-bottom: 30px;
 }
 
 #profilepic {
@@ -40,7 +45,7 @@
 }
 
 #profilepic:hover {
-	box-shadow: 0px 0px 8px blue;
+	box-shadow: 0px 0px 20px blue;
 }
 
 .picsMarginBottom {
